# system_monitor_core

./: .gitignore  CMakeLists.txt  README.md  sysmon.example.ini
.github/workflows/: build-libsysmon.yml  publish-libsysmon.yml
include/sysmon/: sysmon.h
src/: sysmon.c  sysmon_config.c  sysmon_ini.c  sysmon_internal.h  sysmon_snapshot.c  sysmon_time.c
src/modules/: battery.c  builtin.c  cpu.c  network.c  ram.c  storage.c
tools/: sysmon-cli.c
